--- a/app/src/main/res/layout/activity_taking_photo2.xml
+++ b/app/src/main/res/layout/activity_taking_photo2.xml
@@ -6,12 +6,21 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.tree.sstarzak.treevolume.DbActivity">
+    tools:context="com.tree.sstarzak.treevolume.TakingPhotoActivity2">
 
     <TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
-        android:id="@+id/db_tv"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_below="@+id/textView"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_marginTop="112dp" />
 
 </RelativeLayout>
